# SAV-string-simulations

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  styles.css
.github/workflows/: c-cpp.yml  gh-pages.yaml
doc/: README.md  index.html  package-lock.json  package.json
doc/src/: StringProcessor.js  index.js
docs/: _config.yml  index.md
js/: Vector.js  string-geom.js
python/: FD_string_model.py  Model.py  PlotsPhd.py  README.md  SAVSolver.py  StringGeom.py  config.json  config_contact.json  helper_plots.py  lambda_effect.py  order_triangle.py  requirements.txt  run_convergence.py
python/PlotsPhd/: contactSticking.py  driftSpectroGeom2.py  plotDriftGeom.py  plotf0DriftGeom.py  testDriftNonlinearities.py
src/: README.md  StringProcessor.js  index.js
src/maxmsp/: build_copy.sh
src/maxmsp/1dSAV/: CMakeLists.txt  package-info.json  package-info.json.in
src/maxmsp/1dSAV/source/projects/1dSAV.CubicString/: 1dSAV.CubicString.cpp  CMakeLists.txt
src/maxmsp/1dSAV/source/projects/1dSAV.CubicStringBowed/: 1dSAV.CubicStringBowed.cpp
src/maxmsp/package/examples/: bowedString.maxpat  demoPatch.maxpat  loadTest.maxpat  load_instance.maxpat  polyString.json  polyString.maxpat  polyStringMPE.maxpat  polyStringMPE_instance.maxpat  polyString_instance.maxpat  polyString_instance_david.maxpat  shadylines2.jxs  singleString.json  singleString.maxpat
src/maxmsp/test patches/: demoPatch.maxpat  polyString.maxpat  singleString.maxpat
src/processor/: Bow.h  CubicStringProcessor.cpp  CubicStringProcessor.h  CubicStringProcessorEigen.cpp  CubicStringProcessorEigen.h  StringProcessor.cpp  StringProcessor.h  vecMath.h
src/timing/: .gitignore  CMakeLists.txt  build_and_run.sh  timeCubicString.cpp  timeCubicString.txt
